--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-//apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -31,4 +31,8 @@ dependencies {
     // Android KTX (Kotlin 拡張機能セット、主にコーディング補助)
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
+
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-beta01'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-beta01'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-beta01'
 }
