--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
+/.gradle
+/.idea
+/gradle
 /build
+/.DS_Store
 /captures
-.externalNativeBuild
+/.externalNativeBuild
+/gradlew
+/gradlew.bat
+/local.properties
