--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-runtime-ktx:2.3.0-alpha03'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0-alpha03'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0-alpha03'
+
+    // AdMob
+    implementation 'com.google.android.gms:play-services-ads:19.0.0'
 }
