--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.android'
 }
 
 def keystoreProperties = new Properties()
@@ -11,32 +10,32 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    buildToolsVersion '30.0.3'
-    compileSdkVersion 30
+    namespace 'jp.co.integrityworks.storagepathgetter'
+    compileSdkVersion 34
     defaultConfig {
         applicationId "jp.co.integrityworks.storagepathgetter"
-        minSdkVersion 24
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion 28
+        targetSdkVersion 34
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
         release {
-//            keyAlias keystoreProperties['keyAlias']
-//            keyPassword keystoreProperties['keyPassword']
-//            storeFile file(keystoreProperties['storeFile'])
-//            storePassword keystoreProperties['storePassword']
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
         }
     }
 
     buildTypes {
         debug {
             applicationIdSuffix ".deb"
-            manifestPlaceholders = [admob_app_id: project.property("admobAppIdDebug")]
-            buildConfigField("String", "admob_app_id", "\"{$admobAppIdDebug}\"")
-            resValue "string", "ad_unit_id", "$admobUnitIdforDebug"
+            manifestPlaceholders = [admob_app_id: project.property("admobAppIdSample")]
+            buildConfigField("String", "admob_app_id", "\"{$admobAppIdSample}\"")
+            resValue "string", "ad_unit_id", "$admobBannerSample"
         }
         release {
             signingConfig signingConfigs.release
@@ -44,7 +43,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             manifestPlaceholders = [admob_app_id: project.property("admobAppIdStoragePath")]
             buildConfigField("String", "admob_app_id", "\"{$admobAppIdStoragePath}\"")
-            resValue "string", "ad_unit_id", "$admobUnitIdStoragePathBanner"
+            resValue "string", "ad_unit_id", "$admobBannerStoragePath"
         }
     }
 
@@ -55,19 +54,19 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
-    testImplementation 'junit:junit:4.13.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.10"
+    testImplementation 'junit:junit:4.13.2'
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha12'
     // Android KTX (Kotlin 拡張機能セット、主にコーディング補助)
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
 
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.3.3'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.7.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.1'
 
     // AdMob
-    implementation 'com.google.android.gms:play-services-ads:19.7.0'
+    implementation 'com.google.android.gms:play-services-ads:22.3.0'
 }
