--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace 'jp.co.integrityworks.storagepathgetter'
-    compileSdkVersion 34
+    compileSdk 34
     defaultConfig {
         applicationId "jp.co.integrityworks.storagepathgetter"
         minSdkVersion 28
@@ -48,24 +48,26 @@ android {
     }
 
     buildFeatures {
-        dataBinding true
         viewBinding true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.10"
     testImplementation 'junit:junit:4.13.2'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha12'
     // Android KTX (Kotlin 拡張機能セット、主にコーディング補助)
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.fragment:fragment-ktx:1.6.1'
 
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.7.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.1'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.7.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.2'
 
     // AdMob
     implementation 'com.google.android.gms:play-services-ads:22.3.0'
